@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10852] "ScriptMethodsForReviewRelation.createRelation() skal kodes om til at kunne tage genrelle relationer"
    - bug [10769] "DatadockJob er en overflødig klasse"
    - bug [10105] "Fjern funktionen getData fra harvesterne"
    - bug [10690] "Sikring af at data i JavaScripts i samme scopes ikke bliver delt"
